--- a/style.css
+++ b/style.css
@@ -79,10 +79,13 @@ a{
 .caption{
     font-size: 15px;
     font-style: italic;
+    flex-wrap: wrap;
 }
 
 .container{
     display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 .cake-item{
@@ -92,3 +95,7 @@ a{
     padding: 4px;
 }
 
+.cake-group{
+    border: 2px solid green;
+    width: 275px;
+}
