--- a/styles2.css
+++ b/styles2.css
@@ -37,14 +37,14 @@
  }
 
  
- /* .dark {
+.dark {
     color: #333333;
-}  */
+}
 
  
-/* .center {
+.center {
     text-align: center;
-}  */
+}
 
 
 
