fixing some stuff

--- a/styles2.css
+++ b/styles2.css
@@ -9,7 +9,7 @@
 
  
 
-.section { 
+section { 
     padding: 8px 0px 0px 0px;
 }
 
@@ -51,7 +51,7 @@
 /*====footer styles====*/
 
 
- .footer {
+ footer {
     
     background-color: white;
     
