--- a/worksheet4/styles.css
+++ b/worksheet4/styles.css
@@ -105,4 +105,6 @@ ul {
 .container-navigation {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
 }
