--- a/worksheet4/styles.css
+++ b/worksheet4/styles.css
@@ -106,5 +106,5 @@ ul {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
