--- a/worksheet4/styles.css
+++ b/worksheet4/styles.css
@@ -67,7 +67,10 @@ header {
 .section-three {
     background-color: #d95a11;
     height: 800px;
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 iframe { 
@@ -81,7 +84,12 @@ iframe {
 .section-four {
     background-color: #bf0426;
     height: 500px;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family:-apple-system, BlinkMacSystemFont, 
+    'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+    'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* section 5 media items */
@@ -92,6 +100,23 @@ iframe {
 
 }
 
+.media-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    padding: 15px 25px 15px 15px;
+}
+
+.media-container .mediacontent {
+    flex: 1;
+    padding: 10px;
+}
+
+.mediacontent {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: navy;
+    font-size: 20px;
+}
 
 button {
     border: 1px solid blueviolet;
