--- a/worksheet4/styles.css
+++ b/worksheet4/styles.css
@@ -167,3 +167,7 @@ footer {
     box-shadow: 10px 10px 20px black;
     width: 70%;
 }
+
+h1 {
+    font-family: 'Tangerine', Verdana, Geneva, Tahoma, sans-serif;
+}
